--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/src/assets/images/logo.svg" />
+  <title>AttireMe</title>
 </head>
 
 <body>
@@ -12,4 +13,5 @@
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
+<script src="https://cdn.auth0.com/js/lock/12.4/lock.min.js"></script>
 </html>
